UPD: GUI: stubed import/explort forms

--- a/gui/pages/system.html
+++ b/gui/pages/system.html
@@ -1,1 +1,31 @@
 <h1 class="page-header">System</h1>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">Save/Restore config</h3>
+    </div>
+    <div class="panel-body">
+        <p>Backup the running configuration as sql-dump.</p>
+        <a href="/export" class="btn btn-primary"><span class="glyphicon glyphicon-export" aria-hidden="true"></span>
+            Export dump</a>
+        <hr/>
+        <p>Import a configuration as sql-dump.</p>
+        <form class="upload">
+            <input class="form-inline" name="file" id="file"
+                   onChange="fileCheck()"
+                   ng-model="file" type="file">
+            <button type="submit" id="submit" disabled class="form-inline btn btn-primary disabled"><span
+                    class="glyphicon glyphicon-import"
+                    aria-hidden="true"></span> Import dump
+            </button>
+        </form>
+    </div>
+</div>
+<script>
+    function fileCheck() {
+        alert($('#file').value());
+        if ($('#file').value() != null) {
+            $('#submit').removeClass('disabled');
+            $('#submit').aremoveAttribute('disabled');
+        }
+    }
+</script>
