UPD: GUI: renamed "Slave States" to "Cluster Health"

--- a/gui/pages/home.html
+++ b/gui/pages/home.html
@@ -15,5 +15,5 @@
 <a href="/#/problems" class="btn btn-default pull-right" ng-if="problems.length > 3">{{ problems.length - 3 }} more
     Problems <span aria-hidden="true">&rarr;</span></a>
 <br/>
-<h2 class="sub-header">Slave States</h2>
+<h2 class="sub-header">Slave Health</h2>
 <div id="slaves"></div>
