--- a/gui/index.html
+++ b/gui/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="/static/js/c3/c3.css" rel="stylesheet" type="text/css">
-    <title>KIT-MAMID</title>
+    <title>MAMID</title>
 
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -40,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">KIT-MAMID</a>
+            <a class="navbar-brand" href="/">MAMID</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
