--- a/gui/pages/replicasets.html
+++ b/gui/pages/replicasets.html
@@ -2,7 +2,7 @@
 </h1>
 <div class="panel panel-danger">
     <div class="panel-heading">
-        <h3 class="panel-title">Replicasets with Problems</h3>
+        <h3 class="panel-title">Replica Sets with Problems</h3>
     </div>
     <div class="list-group">
         <a href="#/replicasets/{{replicaset.id}}" class="list-group-item" ng-repeat="replicaset in replicasets"
@@ -19,7 +19,7 @@
 
 <div class="panel panel-success">
     <div class="panel-heading">
-        <h3 class="panel-title">Working Replicasets</h3>
+        <h3 class="panel-title">Working Replica Sets</h3>
     </div>
     <div class="list-group">
         <a href="#/replicasets/{{replicaset.id}}" class="list-group-item" ng-repeat="replicaset in replicasets"
