--- a/gui/pages/slaves.html
+++ b/gui/pages/slaves.html
@@ -7,11 +7,12 @@
     </div>
     <div class="list-group">
         <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
-           ng-if="slave.problems.length > 0">
+           ng-if="problemsBySlave[slave.id].length > 0">
+
             <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
             <code>{{ slave.hostname }}</code> - <b>Problems</b>
             <ul>
-                <li ng-repeat="p in slave.problems">{{p.description}}</li>
+                <li ng-repeat="p in problemsBySlave[slave.id]">{{p.description}}</li>
             </ul>
 
         </a>
@@ -24,7 +25,7 @@
     </div>
     <div class="list-group">
         <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
-           ng-if="slave.configured_state == 'maintenance' && slave.problems.length == 0">
+           ng-if="slave.configured_state == 'maintenance' && !problemsBySlave[slave.id]">
             <td>
                 <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
                 <code>{{ slave.hostname }}</code>
@@ -39,7 +40,7 @@
     </div>
     <div class="list-group">
         <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
-           ng-if="slave.configured_state == 'disabled' && slave.problems.length == 0">
+           ng-if="slave.configured_state == 'disabled' && !problemsBySlave[slave.id]">
             <td>
                 <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
                 <code>{{ slave.hostname }}</code>
@@ -54,7 +55,7 @@
     </div>
     <div class="list-group">
         <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
-           ng-if="slave.configured_state == 'active' && slave.problems.length == 0">
+           ng-if="slave.configured_state == 'active' && !problemsBySlave[slave.id]">
             <td>
                 <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
                 <code>{{ slave.hostname }}</code>
