FIXUP: GUI: problem display in slaves overview

--- a/gui/pages/replicasets.html
+++ b/gui/pages/replicasets.html
@@ -10,7 +10,7 @@
             <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
             <code>{{ replicaset.name }}</code> - <b>Problems</b>
             <ul>
-                <li ng-repeat="p in replicaset.problems">{{p.description}}</li>
+                <li ng-repeat="p in problemsByReplicaSet[replicaset.id]">{{p.description}}</li>
             </ul>
 
         </a>
