FIX: GUI: gui part of #38

--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -17,10 +17,11 @@
     </div>
     <table class="table" width="100%">
         <tr ng-repeat="mongo in replicaset.mongods">
-            <td>
+            <td ng-class="{ 'bs-callout-unknown': problemsBySlave[mongo.slave.id].length > 0 }">
                 <a href="/#/slaves/{{mongo.slave.id}}">Mongod on <code>{{ mongo.slave.hostname }}:{{mongo.slave_port}}</code></a> -
-                <b> Slave is in
+                <b ng-if="!problemsBySlave[mongo.slave.id]"> Slave is in
                     {{ mongo.slave.configured_state }} mode.</b>
+                <b ng-if="problemsBySlave[mongo.slave.id].length > 0"> Slave has problems.</b>
 
             </td>
         </tr>
