UPD: gui: replicaSet: sharding_role default => none

--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -58,7 +58,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th style="vertical-align: top; padding-top: 12px;">Sharding role
+                    <th>Sharding configuration server
                     </th>
                     <td colspan="2">
                         <div class="btn-group">
@@ -72,7 +72,7 @@
                                     server (<code>--shardsvr</code>)
                                 </label>
                                 <label class="btn btn-default active">
-                                    <input type="radio" ng-disabled="!is_create_view" ng-model="sharding_role" value="default" checked>Default (<code>&lt;No argument&gt;</code>)
+                                    <input type="radio" ng-disabled="!is_create_view" ng-model="sharding_role" value="none" checked>None (<code>&lt;No argument&gt;</code>)
                                 </label>
                             </div>
                         </div>
