--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -58,28 +58,25 @@
                     </td>
                 </tr>
                 <tr>
-                    <th>Sharding configuration server
+                    <th style="vertical-align: top; padding-top: 12px;">Sharding support
                     </th>
                     <td colspan="2">
-                        <div class="btn-group">
-                            <div class="btn-group" data-toggle="buttons">
+                            <div class="btn-group btn-group-justified" data-toggle="buttons">
                                 <label class="btn btn-default">
                                     <input type="radio" ng-disabled="!is_create_view" ng-model="sharding_role"
-                                           value="configsvr">Config server (<code>--configsvr</code>)
+                                           value="configsvr">Config
                                 </label>
                                 <label class="btn btn-default">
                                     <input type="radio" ng-disabled="!is_create_view" ng-model="sharding_role" value="shardsvr">Shard
-                                    server (<code>--shardsvr</code>)
                                 </label>
                                 <label class="btn btn-default active">
-                                    <input type="radio" ng-disabled="!is_create_view" ng-model="sharding_role" value="none" checked>None (<code>&lt;No argument&gt;</code>)
+                                    <input type="radio" ng-disabled="!is_create_view" ng-model="sharding_role" value="none" checked>None
                                 </label>
                             </div>
-                        </div>
-                        <ul style="margin-top: 10px;">
-                            <li><b>Config server</b>:</li>
-                            <li><b>Shard server</b>:</li>
-                            <li><b>Default</b>:</li>
+                        <ul style="margin-top: 10px; list-style-type: none; padding-left: 0pt; line-height: 1.5em " class="clearfix">
+				<li><b>Config</b>: Mongod is started with the <a target="_blank" href="https://docs.mongodb.com/manual/reference/program/mongod/#cmdoption--shardsvr"><code>--configsvr</code></a></li>
+				<li><b>Shard</b>: Mongod is started with the <a target="_blank" href="https://docs.mongodb.com/manual/reference/program/mongod/#cmdoption--shardsvr"><code>--shardsvr</code></a></li>
+                                <li><b>None</b>: Mongod is started without CLI flags regarding Sharding</li>
                         </ul>
                     </td>
                 </tr>
