FIX: correct model for sharding role

--- a/gui/pages/replicaset.html
+++ b/gui/pages/replicaset.html
@@ -63,14 +63,14 @@
                     <td colspan="2">
                             <div class="btn-group btn-group-justified" data-toggle="buttons">
                                 <label class="btn btn-default">
-                                    <input type="radio" ng-disabled="!is_create_view" ng-model="sharding_role"
+                                    <input type="radio" ng-disabled="!is_create_view" ng-model="edit_replicaset.sharding_role"
                                            value="configsvr">Config
                                 </label>
                                 <label class="btn btn-default">
-                                    <input type="radio" ng-disabled="!is_create_view" ng-model="sharding_role" value="shardsvr">Shard
+                                    <input type="radio" ng-disabled="!is_create_view" ng-model="edit_replicaset.sharding_role" value="shardsvr">Shard
                                 </label>
                                 <label class="btn btn-default active">
-                                    <input type="radio" ng-disabled="!is_create_view" ng-model="sharding_role" value="none" checked>None
+                                    <input type="radio" ng-disabled="!is_create_view" ng-model="edit_replicaset.sharding_role" value="none" checked>None
                                 </label>
                             </div>
                         <ul style="margin-top: 10px; list-style-type: none; padding-left: 0pt; line-height: 1.5em " class="clearfix">
