--- a/gui/pages/problems.html
+++ b/gui/pages/problems.html
@@ -1,4 +1,8 @@
 <h1 class="page-header">Problems</h1>
+<div ng-if="problems.length == 0" class="jumbotron">
+    <h1><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span> Everything is ok</h1>
+    <p>There are currently no known problems.</p>
+</div>
 <div class="bs-callout bs-callout-unknown" ng-repeat="problem in problems | orderBy:problem.first_occurred:true">
     <h4>{{problem.description}} <small>Known since {{formatDate(problem.first_occurred)}}</small></h4>
     <p>{{problem.long_description}}</p>
