--- a/gui/pages/slaves.html
+++ b/gui/pages/slaves.html
@@ -1,65 +1,70 @@
 <h1 class="page-header">Slaves<span class="pull-right"><a href="/#/slaves/new"
                                                           class="btn btn-success">Create new Slave</a></span></h1>
-
-<div class="panel panel-danger">
-    <div class="panel-heading">
-        <h3 class="panel-title">Slaves with Problems</h3>
-    </div>
-    <div class="list-group">
-        <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
-           ng-if="problemsBySlave[slave.id].length > 0">
-
-            <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
-            <code>{{ slave.hostname }}</code> - <b>Problems</b>
-            <ul>
-                <li ng-repeat="p in problemsBySlave[slave.id]">{{p.description}}</li>
-            </ul>
-
-        </a>
-    </div>
+<div ng-if="slaves.length == 0" class="jumbotron">
+    <h1><span class="glyphicon glyphicon-tasks" aria-hidden="true"></span> No Slaves created yet.</h1>
+    <p><br/><a class="btn btn-success btn-lg" href="/#/slaves/new" role="button">Create one</a></p>
 </div>
+<div ng-if="slaves.length > 0">
+    <div class="panel panel-danger">
+        <div class="panel-heading">
+            <h3 class="panel-title">Slaves with Problems</h3>
+        </div>
+        <div class="list-group">
+            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
+               ng-if="problemsBySlave[slave.id].length > 0">
 
-<div class="panel panel-info">
-    <div class="panel-heading">
-        <h3 class="panel-title">Maintenance</h3>
-    </div>
-    <div class="list-group">
-        <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
-           ng-if="slave.configured_state == 'maintenance' && !problemsBySlave[slave.id]">
-            <td>
                 <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
-                <code>{{ slave.hostname }}</code>
-            </td>
-        </a>
-    </div>
-</div>
+                <code>{{ slave.hostname }}</code> - <b>Problems</b>
+                <ul>
+                    <li ng-repeat="p in problemsBySlave[slave.id]">{{p.description}}</li>
+                </ul>
 
-<div class="panel panel-info">
-    <div class="panel-heading">
-        <h3 class="panel-title">Disabled</h3>
+            </a>
+        </div>
     </div>
-    <div class="list-group">
-        <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
-           ng-if="slave.configured_state == 'disabled' && !problemsBySlave[slave.id]">
-            <td>
-                <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
-                <code>{{ slave.hostname }}</code>
-            </td>
-        </a>
-    </div>
-</div>
 
-<div class="panel panel-success">
-    <div class="panel-heading">
-        <h3 class="panel-title">Active</h3>
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">Maintenance</h3>
+        </div>
+        <div class="list-group">
+            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
+               ng-if="slave.configured_state == 'maintenance' && !problemsBySlave[slave.id]">
+                <td>
+                    <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
+                    <code>{{ slave.hostname }}</code>
+                </td>
+            </a>
+        </div>
     </div>
-    <div class="list-group">
-        <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
-           ng-if="slave.configured_state == 'active' && !problemsBySlave[slave.id]">
-            <td>
-                <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
-                <code>{{ slave.hostname }}</code>
-            </td>
-        </a>
+
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">Disabled</h3>
+        </div>
+        <div class="list-group">
+            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
+               ng-if="slave.configured_state == 'disabled' && !problemsBySlave[slave.id]">
+                <td>
+                    <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
+                    <code>{{ slave.hostname }}</code>
+                </td>
+            </a>
+        </div>
+    </div>
+
+    <div class="panel panel-success">
+        <div class="panel-heading">
+            <h3 class="panel-title">Active</h3>
+        </div>
+        <div class="list-group">
+            <a href="#/slaves/{{slave.id}}" class="list-group-item" ng-repeat="slave in slaves"
+               ng-if="slave.configured_state == 'active' && !problemsBySlave[slave.id]">
+                <td>
+                    <span class="glyphicon glyphicon-hdd" aria-hidden="true" ng-if="slave.persistent_storage"></span>
+                    <code>{{ slave.hostname }}</code>
+                </td>
+            </a>
+        </div>
     </div>
 </div>
