ADD: GUI: "logo"

--- a/gui/index.html
+++ b/gui/index.html
@@ -27,6 +27,8 @@
     <script src="/static/js/d3.v3.min.js" charset="utf-8"></script>
     <script src="/static/js/c3/c3.min.js"></script>
     <script src="/static/js/mamid.js"></script>
+
+    <link rel="icon" type="image/png" href="/static/img/favicon.png" sizes="32x32">
 </head>
 
 <body ng-controller="mainController">
@@ -40,7 +42,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">MAMID</a>
+            <a class="navbar-brand" href="/"><img style="margin-top: -5px; margin-right: 10px; width: 32px; float:left;" src="/static/img/mamid.png"/> MAMID</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
