--- a/gui/pages/system.html
+++ b/gui/pages/system.html
@@ -20,3 +20,4 @@
         </div>
     </div>
 </div>
+<p><img style="max-height: 200px; margin-left: auto; display: block; margin-right: auto" src="/static/img/mamid.png"/></p>
