ADD: gui: system logo heading

--- a/gui/pages/system.html
+++ b/gui/pages/system.html
@@ -20,4 +20,6 @@
         </div>
     </div>
 </div>
-<p><img style="max-height: 200px; margin-left: auto; display: block; margin-right: auto" src="/static/img/mamid.png"/></p>
+<hr/>
+    <h3 class="text-center" style="color: #858585">Powered by <span class="mamid"></span></h3>
+    <img class="center-block" style="max-height: 200px;" src="/static/img/mamid.png"/>
