--- a/gui/index.html
+++ b/gui/index.html
@@ -42,7 +42,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><img style="margin-top: -5px; margin-right: 10px; width: 32px; float:left;" src="/static/img/mamid.png"/> MAMID</a>
+            <a class="navbar-brand" href="/#/"><img style="margin-top: -5px; margin-right: 10px; width: 32px; float:left;" src="/static/img/mamid.png"/> MAMID</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
