--- a/gui/pages/home.html
+++ b/gui/pages/home.html
@@ -6,7 +6,7 @@
 </div>
 <div class="bs-callout bs-callout-unknown"
      ng-repeat="problem in problems | orderBy:problem.first_occurred:true | limitTo:3">
-    <h4>{{problem.description}}
+    <h4><span ng-bind-html="problem.description"></span>
         <small>Known since {{formatDate(problem.first_occurred)}}</small>
     </h4>
     <p>{{problem.long_description}}</p>
