UPD: GUI: improved style

--- a/gui/pages/system.html
+++ b/gui/pages/system.html
@@ -22,4 +22,4 @@
 </div>
 <hr/>
     <h3 class="text-center" style="color: #858585">Powered by <span class="mamid"></span></h3>
-    <img class="center-block" style="max-height: 200px;" src="/static/img/mamid.png"/>
+    <img class="center-block mamid-logo" style="max-height: 200px;" src="/static/img/mamid.png" ng-click="e()"/>
